[grazie] Rules & MLEC: Use Problem API where possible
GitOrigin-RevId: 86bd5b4ca62e1df99472c9b6a11b3e25644ae02b